ADD_DEFINITIONS(-DDEBUG)
ADD_DEFINITIONS("-Wall -ansi -pedantic -g -fpermissive")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/lib)
#SET(SRC_LIST main.cpp gameLogger.cpp redisClient.cpp AppLogger.cpp ofxLog.cpp ofxLogger.cpp)
#SET(SRC_LIST ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB SRC_LIST "./*.cpp")  
ADD_EXECUTABLE(router ${SRC_LIST})
TARGET_LINK_LIBRARIES(router zmq czmq pthread rt)
INSTALL(TARGETS router RUNTIME DESTINATION bin)
