ADD_DEFINITIONS(-DDEBUG)
ADD_DEFINITIONS("-Wall -ansi -pedantic -g -fpermissive")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/gateway_server)
#SET(SRC_LIST main.cpp gameLogger.cpp redisClient.cpp AppLogger.cpp ofxLog.cpp ofxLogger.cpp)
#SET(SRC_LIST ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB MODULE_LIST "${PROJECT_SOURCE_DIR}/module/*.cpp") 
FILE(GLOB DATABASE_LIST "database/*.cpp")  
FILE(GLOB MESSAGES_LIST "messages/*.cpp")  
FILE(GLOB SDK_LIST "sdk/*.cpp" "sdk/*.cc")  
FILE(GLOB SERVICE_LIST "service/*.cpp")  
FILE(GLOB LOGIC_SERVICE_LIST "logic_server/*.cpp")
ADD_EXECUTABLE(gateway ${SDK_LIST} ${LOGIC_SERVICE_LIST} ${MODULE_LIST} ${SERVICE_LIST} ${MESSAGES_LIST} ${DATABASE_LIST} )
TARGET_LINK_LIBRARIES(gateway PocoUtild PocoDataMySQLd PocoDatad PocoZipd PocoDataSQLited PocoNetd PocoXMLd hiredis msgpack zmq czmq boost_thread jsoncpp msgpack msgpackc tcmalloc_minimal boost_system pthread PocoFoundationd mysqlclient z rt dl)
INSTALL(TARGETS gateway RUNTIME DESTINATION bin)
